fix(style): vertical padding for dunst was too big, wofi expander box was white

--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -27,6 +27,10 @@ window {
     background-color: #171717;
 }
 
+#expander-box {
+    background-color: rgba(0, 0, 0, 0);
+}
+
 #entry {
     margin: 5px;
     background-color: rgb(32, 32, 32);
